# cli-tutorial

./: README.rst  pyproject.toml
cli_tutorial/: cli.py
