[tool.poetry]
name = "cli-tutorial"
version = "0.1.0"
description = ""
authors = ["Code4you <40631055+code-4you@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1"
funcy = "^1.15"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
